--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,9 @@
-<h1>Let us your review!</h1>
+<div class= 'container'>
+  <h1>Let us your review!</h1>
 
-<%= simple_form_for [ @restaurant, @review ] do |f| %>
-  <%= f.input :content %>
-  <%= f.input :rating %>
-  <%= f.submit "Submit review", class: "btn btn-primary" %>
-<% end %>
+  <%= simple_form_for [ @restaurant, @review ] do |f| %>
+    <%= f.input :content %>
+    <%= f.input :rating %>
+    <%= f.submit "Submit review", class: "btn btn-success" %>
+  <% end %>
+</div>
